[ci skip] migrating load tests to separate test suite