@@ -20,6 +20,16 @@ jar {
     version = version
 }
 
+test {
+    include 'com/clust4j/TestSuite*'
+    maxHeapSize = "512m"
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    beforeTest { descriptor ->
+      logger.lifecycle("Running test: " + descriptor)
+   }
+}
+
 dependencies {
     compile 'log4j:log4j:1.2.17'
     compile 'org.apache.commons:commons-math3:3.2'
